Bug 296246 - When offline (on purpose) and marking a message to send, kmail asks to go online (and misspells word too). STOP ASKING.
Summary: When offline (on purpose) and marking a message to send, kmail asks to go onl...
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-18 04:56 UTC by Joe Biden
Modified: 2012-03-19 12:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joe Biden 2012-03-18 04:56:19 UTC
When offline (on purpose) and marking a message to send, kmail asks to go online (and misspells word too). STOP ASKING PLEASE.

I work offline often, because I have sketchy net access. I set Kmail to be offline. Then I go through 100 emails at a time and reply, so when I am back online, I can send them.

Kmail apparently needs to ask me EVERY TIME if I want to go online, and does so with a misspelled question:

"The mail dispatcher is offline, mails can not be send. Do you want to make it online ?"

The word usage should be "sent".

Need a check box to disable this. I do not want to go online, and when I do, I will make sure to let Kmail know!

Who ruined my poor kmail? It's so bad now...
Comment 1 Laurent Montel 2012-03-19 09:29:48 UTC
typo already fixed.
Comment 2 Laurent Montel 2012-03-19 12:06:56 UTC
Git commit b35819e8062b8463d3a127170fa470591b9caa6c by Montel Laurent.
Committed on 19/03/2012 at 13:06.
Pushed by mlaurent into branch 'master'.

Fix Bug 296246 - When offline (on purpose) and marking a message to

send, kmail asks to go online (and misspells word too). STOP ASKING.

FIXED-IN: 4.8.2

M  +2    -2    messagecomposer/util.cpp

http://commits.kde.org/kdepim/b35819e8062b8463d3a127170fa470591b9caa6c
Comment 3 Laurent Montel 2012-03-19 12:09:27 UTC
Git commit 0f62bf53c740b2f27e676ceb1a4005c93c599a22 by Montel Laurent.
Committed on 19/03/2012 at 13:06.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 296246 - When offline (on purpose) and marking a message to

send, kmail asks to go online (and misspells word too). STOP ASKING.

FIXED-IN: 4.8.2
(cherry picked from commit b35819e8062b8463d3a127170fa470591b9caa6c)

Conflicts:

	messagecomposer/util.cpp

M  +2    -2    messagecomposer/util.cpp

http://commits.kde.org/kdepim/0f62bf53c740b2f27e676ceb1a4005c93c599a22