Fix Bug 296246 - When offline (on purpose) and marking a message to

send, kmail asks to go online (and misspells word too). STOP ASKING.

FIXED-IN: 4.8.2
BUG: 296246
(cherry picked from commit b35819e8062b8463d3a127170fa470591b9caa6c)

Conflicts:

	messagecomposer/util.cpp